hphp/test/zend/good/Zend/tests/offset_object.php.expectf

Fatal error: Object does not implement ArrayAccess in %s/offset_object.php on line 4
